# claude-code-docs

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  UNINSTALL.md  install.sh  paths_manifest.json  pyproject.toml  uninstall.sh
docs/: .search_index.json  changelog.md  claude-code__hooks.md  claude-code__settings.md  claude-code__statusline.md  docs__en__about-claude__models__overview.md  docs__en__about-claude__pricing.md  docs__en__agent-sdk__typescript-v2-preview.md  docs__en__agent-sdk__typescript.md  docs__en__agents-and-tools__tool-use__advisor-tool.md  docs__en__agents-and-tools__tool-use__code-execution-tool.md  docs__en__agents-and-tools__tool-use__memory-tool.md  docs__en__api__admin.md  docs__en__api__admin__external_keys.md  docs__en__api__admin__external_keys__create.md  docs__en__api__admin__external_keys__list.md  docs__en__api__admin__external_keys__retrieve.md  docs__en__api__admin__external_keys__update.md  docs__en__api__rate-limits.md  docs__en__api__sdks__csharp.md  docs__en__api__sdks__java.md  docs__en__api__sdks__php.md  docs__en__api__sdks__python.md  docs__en__api__sdks__typescript.md  docs__en__build-with-claude__batch-processing.md  docs__en__build-with-claude__claude-in-amazon-bedrock.md  docs__en__build-with-claude__claude-in-microsoft-foundry.md  docs__en__build-with-claude__claude-on-amazon-bedrock.md  docs__en__build-with-claude__claude-on-vertex-ai.md  docs__en__build-with-claude__claude-platform-on-aws.md  docs__en__build-with-claude__context-windows.md  docs__en__build-with-claude__pdf-support.md  docs__en__build-with-claude__prompt-caching.md  docs__en__build-with-claude__structured-outputs.md  docs__en__build-with-claude__vision.md  docs__en__cli-sdks-libraries__libraries__openai-sdk.md  docs__en__get-started.md  docs__en__glossary.md  docs__en__manage-claude__api-and-data-retention.md  docs__en__manage-claude__rate-limits-api.md  (+8 more)
enhancements/: CAPABILITIES.md  EXAMPLES.md  FEATURES.md  README.md
(+20 files in other folders)
