[project]
name = "claude-code-docs"
version = "0.5.1"
description = "Claude Code documentation mirror with automated updates and enhanced features"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is a scripts-based project, not a traditional package
# Don't auto-discover packages to avoid including docs/specs/analysis
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access",
    "integration: marks tests as integration tests",
]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=scripts",
    "--cov-report=html:reports/coverage/htmlcov",
    "--cov-report=term-missing",
]

[tool.coverage.run]
# Use relative file paths in coverage data
relative_files = true
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
# Reporting configuration
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.paths]
# Map absolute paths to relative paths for better portability
source = [
    "scripts/",
    "*/claude-code-docs/scripts/",
    "*/work/claude-code-docs/claude-code-docs/scripts/",
]
